fix: fixed z-index issues with the middle-circle and the mobile navbar

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -51,3 +51,7 @@ $breakpoints: (
   xl: 1280px,
   2xl: 1536px,
 );
+
+// Z-index
+$z-index-default: 1;
+$z-index-navbar: 10;
